réalisation du menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 
 @import "./Sass/layout/footer";
 @import "./Sass/layout/header";
+@import "./Sass/layout/menu";
 
 @import "./Sass/component/banner";
 @import "./Sass/component/masonery";
