--- a/src/Sass/layout/_header.scss
+++ b/src/Sass/layout/_header.scss
@@ -3,11 +3,29 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    &__h1 {
-        display: flex;
+    position: relative;
+    @media (max-width: 400px) {
+        flex-direction: column-reverse;
         margin: 0 auto;
+    }
+    &__invisible {
+        height: 24px;
+        width: 24px;
+        margin: 16px;
+        visibility: hidden;
+        z-index: 0;
+        @media (max-width: 670px) {
+            font-size: 12px;
+        }
+    }
+    &__h1 {
+        margin: 16px;
+        z-index: 100;
         @media (max-width: 670px) {
             font-size: 18px;
+        }
+        @media (max-width: 400px) {
+            text-align: center;
         }
     }
     &__p {
@@ -17,9 +35,32 @@
         font-size: 20px;
         margin: 16px;
         cursor: pointer;
+        z-index: 100;
         @media (max-width: 670px) {
             font-size: 12px;
         }
+        @media (max-width: 400px) {
+            text-align: center;
+        }
+    }
+    &__sign {
+        text-decoration: none;
+        margin: 16px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        color: black;
+        font-size: 20px;
+        z-index: 100;
+        @media (max-width: 670px) {
+            font-size: 12px;
+        }
+        @media (max-width: 400px) {
+            text-align: center;
+        }
+    }
+    &__sign > p:hover {
+        text-decoration: underline;
     }
 }
 
@@ -28,7 +69,7 @@
     margin: 16px;
     position:fixed;
     cursor: pointer;
-    z-index: 100;
+    z-index: 500;
     @media (max-width: 670px) {
         font-size: 12px;
     }
@@ -38,6 +79,18 @@
     margin: 16px;
     font-size: 24px;
     cursor: pointer;
+    z-index: 100;
+    @media (max-width: 670px) {
+        font-size: 12px;
+    }
+}
+
+.fa-user-circle, .fa-sign-out {
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    margin: 16px;
+    z-index: 100;
     @media (max-width: 670px) {
         font-size: 12px;
     }
