--- a/src/Sass/pages/_home.scss
+++ b/src/Sass/pages/_home.scss
@@ -3,6 +3,6 @@
     flex-direction: column;
     align-items: center;
     height: 1000px !important;
-    width: 1000px !important;
+    width: 100%;
     background-color: aqua;
 }
